--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_svg: ^2.0.10+1
+  flutter_bloc: ^8.1.6
+  go_router: ^14.2.3
+  google_fonts: ^6.2.1
+  flutter_spinkit: ^5.2.1
+  turn_page_transition: ^0.3.0
 
 dev_dependencies:
   flutter_test:
