--- a/.gitignore
+++ b/.gitignore
@@ -43,11 +43,11 @@ app.*.map.json
 /android/app/release
 pubspec.lock
 pubspec.yaml
-/windows/*
-/web/*
-/android/*
-/ios/*
-/macos/*
-/linux/*
-/.dart_tool/*
-/.idea/*
+windows/*
+web/*
+android/*
+ios/*
+macos/*
+linux/*
+.dart_tool/*
+.idea/*
