added: variables of environment

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,12 @@
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withInputStream { stream ->
+        localProperties.load(stream)
+    }
+}
+def googleMapsApiKey = localProperties.getProperty('googleMapsApiKey')
+
 plugins {
     id "com.android.application"
     id "kotlin-android"
@@ -28,6 +37,7 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        manifestPlaceholders = [googleMapsApiKey: googleMapsApiKey]
     }
 
     buildTypes {
