--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_spinkit: ^5.2.1
   turn_page_transition: ^0.3.0
+  google_maps_flutter: ^2.9.0
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  geocoding: ^3.0.0
+  flutter_heat_map: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +68,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+      - assets/data/zone.json
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
