--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   geocoding: ^3.0.0
   flutter_heat_map: ^1.2.1
   location: ^6.0.2
+  flutter_compass: ^0.8.0
 
 dev_dependencies:
   flutter_test:
